# SiteGenerationTool

./: CONTRIBUTING.md  LICENSE  README.md  SSJ.py  Sitegen.py  config.json  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
src/: SSJ.py  main.py  ssj.py
src/super_site_generator_package/: main.py  ssj.py
static/: style.css
tests/: test_ssj_convert_markdown.py  test_ssj_edit_template.py  test_ssj_line_by_line.py
